Linear and ridge regressions done

--- a/project/Luther_clean.ipynb
+++ b/project/Luther_clean.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d8d3c152a73e1933f11ec69237472fcdb4d9b75dedde5bb6e5ac8d1b1dc3f286"
+  "signature": "sha256:12dd0c5bc81a74db4d23c27d5094ac084f33b11d6493504f93a2570352037a54"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,7 +52,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -64,7 +64,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -108,12 +108,157 @@
       "        pass\n",
       "\n",
       "collapsed_df = pd.DataFrame(franchises_dict_list)\n",
-      "# collapsed_df.describe()\n"
+      "collapsed_df.describe()\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>act_gross</th>\n",
+        "      <th>act_meta</th>\n",
+        "      <th>days_elapsed</th>\n",
+        "      <th>prev_gross</th>\n",
+        "      <th>prev_meta</th>\n",
+        "      <th>same_dir</th>\n",
+        "      <th>same_genre</th>\n",
+        "      <th>same_rating</th>\n",
+        "      <th>time_d</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>count</th>\n",
+        "      <td> 1.470000e+02</td>\n",
+        "      <td> 77.000000</td>\n",
+        "      <td>   147.000000</td>\n",
+        "      <td> 1.470000e+02</td>\n",
+        "      <td> 72.000000</td>\n",
+        "      <td> 147.000000</td>\n",
+        "      <td> 147.000000</td>\n",
+        "      <td> 147.000000</td>\n",
+        "      <td>                        147</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>mean</th>\n",
+        "      <td> 1.110735e+08</td>\n",
+        "      <td> 49.779221</td>\n",
+        "      <td>  1264.523810</td>\n",
+        "      <td> 1.882083e+08</td>\n",
+        "      <td> 57.798611</td>\n",
+        "      <td>   0.394558</td>\n",
+        "      <td>   0.768707</td>\n",
+        "      <td>   0.673469</td>\n",
+        "      <td> -188 days +02:46:42.219662</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>std</th>\n",
+        "      <td> 1.272765e+08</td>\n",
+        "      <td> 14.923157</td>\n",
+        "      <td>  1450.433154</td>\n",
+        "      <td> 1.522063e+08</td>\n",
+        "      <td> 13.758905</td>\n",
+        "      <td>   0.490426</td>\n",
+        "      <td>   0.423101</td>\n",
+        "      <td>   0.470547</td>\n",
+        "      <td>  1450 days 10:23:44.479120</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>min</th>\n",
+        "      <td> 0.000000e+00</td>\n",
+        "      <td> 16.000000</td>\n",
+        "      <td>    42.000000</td>\n",
+        "      <td> 6.255000e+04</td>\n",
+        "      <td> 29.500000</td>\n",
+        "      <td>   0.000000</td>\n",
+        "      <td>   0.000000</td>\n",
+        "      <td>   0.000000</td>\n",
+        "      <td>           42 days 00:00:00</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>25%</th>\n",
+        "      <td> 1.995510e+07</td>\n",
+        "      <td> 41.000000</td>\n",
+        "      <td>   601.000000</td>\n",
+        "      <td> 7.415348e+07</td>\n",
+        "      <td> 48.000000</td>\n",
+        "      <td>   0.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>   0.000000</td>\n",
+        "      <td>          601 days 00:00:00</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>50%</th>\n",
+        "      <td> 6.855170e+07</td>\n",
+        "      <td> 50.000000</td>\n",
+        "      <td>   910.000000</td>\n",
+        "      <td> 1.543856e+08</td>\n",
+        "      <td> 59.000000</td>\n",
+        "      <td>   0.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>          910 days 00:00:00</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>75%</th>\n",
+        "      <td> 1.538202e+08</td>\n",
+        "      <td> 58.000000</td>\n",
+        "      <td>  1326.500000</td>\n",
+        "      <td> 2.510357e+08</td>\n",
+        "      <td> 68.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>         1326 days 12:00:00</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>max</th>\n",
+        "      <td> 6.721621e+08</td>\n",
+        "      <td> 94.000000</td>\n",
+        "      <td> 10157.000000</td>\n",
+        "      <td> 9.196244e+08</td>\n",
+        "      <td> 90.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>   1.000000</td>\n",
+        "      <td>        10157 days 00:00:00</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 71,
+       "text": [
+        "          act_gross   act_meta  days_elapsed    prev_gross  prev_meta  \\\n",
+        "count  1.470000e+02  77.000000    147.000000  1.470000e+02  72.000000   \n",
+        "mean   1.110735e+08  49.779221   1264.523810  1.882083e+08  57.798611   \n",
+        "std    1.272765e+08  14.923157   1450.433154  1.522063e+08  13.758905   \n",
+        "min    0.000000e+00  16.000000     42.000000  6.255000e+04  29.500000   \n",
+        "25%    1.995510e+07  41.000000    601.000000  7.415348e+07  48.000000   \n",
+        "50%    6.855170e+07  50.000000    910.000000  1.543856e+08  59.000000   \n",
+        "75%    1.538202e+08  58.000000   1326.500000  2.510357e+08  68.000000   \n",
+        "max    6.721621e+08  94.000000  10157.000000  9.196244e+08  90.000000   \n",
+        "\n",
+        "         same_dir  same_genre  same_rating                      time_d  \n",
+        "count  147.000000  147.000000   147.000000                         147  \n",
+        "mean     0.394558    0.768707     0.673469  -188 days +02:46:42.219662  \n",
+        "std      0.490426    0.423101     0.470547   1450 days 10:23:44.479120  \n",
+        "min      0.000000    0.000000     0.000000            42 days 00:00:00  \n",
+        "25%      0.000000    1.000000     0.000000           601 days 00:00:00  \n",
+        "50%      0.000000    1.000000     1.000000           910 days 00:00:00  \n",
+        "75%      1.000000    1.000000     1.000000          1326 days 12:00:00  \n",
+        "max      1.000000    1.000000     1.000000         10157 days 00:00:00  "
+       ]
+      }
+     ],
+     "prompt_number": 71
     },
     {
      "cell_type": "code",
@@ -131,19 +276,216 @@
       "                                                label_display_style=\"click\",\n",
       "                                                xlabel=\"Avg. Gross of Previous Films (Million $)\",\n",
       "                                                ylabel = \"Gross of Third Film (Million $)\")\n",
-      "\n",
-      "# plot!                                                                                                                                                                              \n",
-      "# plotter.add_text(0, 360, \"Highly\\nprofitable\")\n",
-      "# plotter.add_text(200, 0, \"Absolutely\\nregrettable\")\n",
-      "plt.title('Grosses for 3rd Films in Trilogies', fontsize=17)\n",
-      "# plt.plot(collapsed_df['prev_gross'],collapsed_df['prev_gross'], 'm--', label = 'Ideal Prediction')\n",
-      "\n",
+      "plt.title('Grosses for 3rd Films in Trilogies', fontsize=25)\n",
       "plotter.plot()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 151
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "linear regression"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# import statsmodels.formula.api as sm\n",
+      "from sklearn.cross_validation import train_test_split\n",
+      "from sklearn.linear_model import LinearRegression\n",
+      "\n",
+      "cleaned_un = collapsed_df[pd.notnull(collapsed_df['prev_meta'])]\n",
+      "cleaned_df= cleaned_un.sort(columns='prev_gross')\n",
+      "var_lab = list(cleaned_df.columns.values)\n",
+      "\n",
+      "train, test = train_test_split(cleaned_df, test_size = 0.25)\n",
+      "\n",
+      "train_df = pd.DataFrame(train,columns=var_lab) \n",
+      "test_df = pd.DataFrame(test,columns=var_lab) \n",
+      "\n",
+      "\n",
+      "X_train = train_df[['prev_gross','prev_meta']]\n",
+      "Y_train = train_df[['act_gross']]\n",
+      "\n",
+      "X_test = test_df[['prev_gross','prev_meta']]\n",
+      "Y_test = test_df[['act_gross']]\n",
+      "\n",
+      "sk_linmodel = LinearRegression()\n",
+      "sk_linmodel.fit(X_train,Y_train)\n",
+      "\n",
+      "\n",
+      "print sk_linmodel.coef_\n",
+      "print sk_linmodel.intercept_\n",
+      "print  sk_linmodel.score(X_train, Y_train)\n",
+      "\n",
+      "plt.scatter(X_test['prev_gross']/10**6, Y_test/10**6 , c='red')\n",
+      "plt.xlabel('Avg. Gross of Previous Films (Million $)')\n",
+      "plt.ylabel('Gross of Third Film (Million $)')\n",
+      "plt.plot(X_test['prev_gross']/10**6, sk_linmodel.predict(X_test)/10**6)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[  6.73242386e-01   1.21265069e+06]]\n",
+        "[-63563646.5718804]\n",
+        "0.642266517061\n"
+       ]
+      }
+     ],
+     "prompt_number": 164
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "ridge"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.linear_model import Ridge\n",
+      "\n",
+      "cleaned_un = collapsed_df.dropna()\n",
+      "cleaned_df= cleaned_un.sort(columns='prev_gross')\n",
+      "\n",
+      "var_lab = list(cleaned_df.columns.values)\n",
+      "\n",
+      "train, test = train_test_split(cleaned_df, test_size = 0.25)\n",
+      "\n",
+      "train_df = pd.DataFrame(train,columns=var_lab) \n",
+      "test_df = pd.DataFrame(test,columns=var_lab) \n",
+      "\n",
+      "\n",
+      "X_train = train_df[['prev_gross','prev_meta','prev_meta','act_meta','days_elapsed','same_genre','same_dir','same_rating']]\n",
+      "Y_train = train_df[['act_gross']]\n",
+      "\n",
+      "X_test = test_df[['prev_gross','prev_meta','prev_meta','act_meta','days_elapsed','same_genre','same_dir','same_rating']]\n",
+      "Y_test = test_df[['act_gross']]\n",
+      "\n",
+      "sk_model = Ridge()\n",
+      "sk_model.fit(X_train,Y_train)\n",
+      "\n",
+      "\n",
+      "xt_sort = collapsed_df.sort(columns='prev_gross')\n",
+      "\n",
+      "\n",
+      "print sk_model.coef_\n",
+      "print sk_model.intercept_\n",
+      "print  sk_model.score(X_train, Y_train)\n",
+      "\n",
+      "plt.scatter(X_test['prev_gross']/10**6, Y_test/10**6 , c='black')\n",
+      "plt.xlabel('Avg. Gross of Previous Films (Million $)')\n",
+      "plt.ylabel('Gross of Third Film (Million $)')\n",
+      "plt.plot(X_test['prev_gross']/10**6, sk_model.predict(X_test)/10**6, c='red')\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[  6.14446061e-01  -2.28454705e+05  -2.28454705e+05   3.26304610e+06\n",
+        "   -3.53803262e+04   3.53957045e+07   8.53406268e+06  -7.04878197e+06]]\n",
+        "[ -1.09258811e+08]\n",
+        "0.806759801161\n"
+       ]
+      }
+     ],
+     "prompt_number": 167
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import plotters\n",
+      "cleantest_df = collapsed_df[pd.notnull(collapsed_df['days_elapsed'])]\n",
+      "x = cleantest_df['days_elapsed']\n",
+      "y = cleantest_df['act_gross']/10**6\n",
+      "name = cleantest_df['new_title']\n",
+      "\n",
+      "# initiate hover plotter                                                                                                                                                                   \n",
+      "plotter = plotters.TwoVariableComparisonPlotter(x, y, name,\n",
+      "                                                x_range=(0, 6000),\n",
+      "                                                y_range = (0, 1000),\n",
+      "                                                label_display_style=\"hover\",\n",
+      "                                                xlabel=\"Avg. Gross of Previous Films (Million $)\",\n",
+      "                                                ylabel = \"Gross of Third Film (Million $)\")\n",
+      "\n",
+      "plt.title('Grosses for 3rd Films in Trilogies', fontsize=25)\n",
+      "plotter.plot()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 103
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Looking at continuing genre, director"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cont_flag = collapsed_df['same_genre']\n",
+      "xcon = cont_flag*collapsed_df['prev_gross']/10**6\n",
+      "ycon = cont_flag*collapsed_df['act_gross']/10**6\n",
+      "xnocon = (-1)*(cont_flag-1)*collapsed_df['prev_gross']/10**6\n",
+      "ynocon = (-1)*(cont_flag-1)*collapsed_df['act_gross']/10**6\n",
+      "\n",
+      "\n",
+      "plt.scatter(xcon,ycon, c='red')\n",
+      "plt.xlabel('Avg. Gross of Previous Films (Million $)')\n",
+      "plt.ylabel('Gross of Third Film (Million $)')\n",
+      "plt.scatter(xnocon,ynocon, c='blue')\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 122
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cont_flag = collapsed_df['same_rating']\n",
+      "xcon = cont_flag*collapsed_df['prev_gross']/10**6\n",
+      "ycon = cont_flag*collapsed_df['act_gross']/10**6\n",
+      "xnocon = (-1)*(cont_flag-1)*collapsed_df['prev_gross']/10**6\n",
+      "ynocon = (-1)*(cont_flag-1)*collapsed_df['act_gross']/10**6\n",
+      "\n",
+      "\n",
+      "plt.scatter(xcon,ycon, c='red')\n",
+      "plt.xlabel('Avg. Gross of Previous Films (Million $)')\n",
+      "plt.ylabel('Gross of Third Film (Million $)')\n",
+      "plt.scatter(xnocon,ynocon, c='blue')\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 124
     },
     {
      "cell_type": "code",
