Started tracking keynote. trilogy plots

--- a/project/luther_analysis.ipynb
+++ b/project/luther_analysis.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:63540bc83643edc23f79c3e9680d8eaeeda38f361be62278c53111d8fea669d0"
+  "signature": "sha256:1a412b762d7229aa557f25ebc16ba0fbfd21a9e7c5a454c0d617ab7b722be58c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -721,7 +721,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import plotters\n",
+      "\n",
       "# collapsed_df.plot(x='prev_gross',y='act_gross', kind='scatter')\n",
       "# plt.title('Domestic Grosses for Third films in Trilogies', fontsize=17);\n",
       "# plt.xlabel(\"Avg. Gross of Previous Film (Billion $)\", fontsize=15, labelpad=5);\n",
@@ -733,12 +733,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import plotters\n",
       "x = collapsed_df['prev_gross']/1e6\n",
       "y = collapsed_df['act_gross']/1e6\n",
       "name = collapsed_df['new_title']\n",
@@ -747,21 +748,38 @@
       "plotter = plotters.TwoVariableComparisonPlotter(x, y, name,\n",
       "                                                x_range=(0, 1000),\n",
       "                                                y_range = (0, 1000),\n",
-      "                                                label_display_style=\"hover\",\n",
-      "                                                xlabel=\"Budget (million dollars)\",\n",
-      "                                                ylabel = \"Avg. Gross of Previous Film (Million $)\")\n",
+      "                                                label_display_style=\"click\",\n",
+      "                                                xlabel=\"Avg. Gross of Previous Films (Million $)\",\n",
+      "                                                ylabel = \"Gross of Third Film (Million $)\")\n",
       "\n",
       "# plot!                                                                                                                                                                              \n",
       "# plotter.add_text(0, 360, \"Highly\\nprofitable\")\n",
       "# plotter.add_text(200, 0, \"Absolutely\\nregrettable\")\n",
       "plt.title('Grosses for 3rd Films in Trilogies', fontsize=17)\n",
+      "# plt.plot(collapsed_df['prev_gross'],collapsed_df['prev_gross'], 'm--', label = 'Ideal Prediction')\n",
       "\n",
       "plotter.plot()"
      ],
      "language": "python",
      "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
      "outputs": [],
-     "prompt_number": 57
+     "prompt_number": 61
     },
     {
      "cell_type": "code",
