Presentation nearly done.

--- a/project/luther_analysis.ipynb
+++ b/project/luther_analysis.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:7bee8f03b734b640b15373a0553bdbcd57d558e646e3c81478c85af528cdd230"
+  "signature": "sha256:1d7aa7c7dda85d2ae15d7fbe275ff1737f19e3fa3d268191106dc9fc0dab0d2b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -762,6 +762,14 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 61
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
