--- a/project/luther_analysis.ipynb
+++ b/project/luther_analysis.ipynb
@@ -38,18 +38,11 @@
        "text": [
         "The autoreload extension is already loaded. To reload it, use:\n",
         "  %reload_ext autoreload\n",
-        "Setting plotting theme to default-light. Palette available in b16_colors"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "Setting plotting theme to default-light. Palette available in b16_colors\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -62,7 +55,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -74,7 +67,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -87,9 +80,12 @@
       "        movies_df = movies_df[movies_df.rating != 'PG']\n",
       "    franchise_dict = {}\n",
       "    try:\n",
-      "        franchise_dict['first_title'] = movies_df['title'].iloc[0]  \n",
+      "        franchise_dict['first_title'] = movies_df['title'].iloc[0]\n",
+      "        franchise_dict['second_title'] = movies_df['title'].iloc[1]  \n",
       "        franchise_dict['new_title'] = movies_df['title'].iloc[2] \n",
       "        franchise_dict['franchise'] = franchise\n",
+      "        franchise_dict['first_gross'] = movies_df['domestic_total_gross'].iloc[0] \n",
+      "        franchise_dict['second_gross'] = movies_df['domestic_total_gross'].iloc[1] \n",
       "        franchise_dict['prev_gross'] = (movies_df['domestic_total_gross'].iloc[0] + movies_df['domestic_total_gross'].iloc[1])/float(2)\n",
       "        franchise_dict['act_gross'] = movies_df['domestic_total_gross'].iloc[2]\n",
       "        franchise_dict['prev_meta'] = (movies_df['metacritic'].iloc[0] + movies_df['metacritic'].iloc[1])/float(2)\n",
@@ -154,7 +150,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -166,11 +162,11 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "from IPython.display import HTML\n",
       "HTML(collapsed_df.to_html())"
@@ -2705,7 +2701,6 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
        "text": [
         "<IPython.core.display.HTML at 0x10a28d048>"
        ]
